src/styles/partials/_typography.css
body {
  @apply font-sans antialiased;
}

/* Headings */
h1, h2, h3, h4, h5, h6 {
  @apply
    p-0
    mb-6
		leading-tight
    font-display;
}

h1 {
	@apply text-xl;
}

h2 {
	@apply text-lg;
}

.text-screen-display {
  @apply text-6xl;
  line-height: 1;

  @screen md {
    font-size: 7.5vw;
    line-height: 4.7vw;
  }

  @screen xl {
    font-size: 8.5vw;
    line-height: 5.3vw;
  }
}

.text-screen-display--journal {
  @apply text-5xl;
  line-height: 0.85;

  @screen md {
    font-size: 6.25vw;
    line-height: 5vw;
  }

  @screen xl {
    font-size: 6.75vw;
    line-height: 5.25vw;
  }
}

.text-screen-display--large {
  @apply text-7xl;
  line-height: 0.75;

  @screen md {
    font-size: 12vw;
    line-height: 5.2vw !important;
  }

  @screen xl {
    font-size: 12.5vw;
    line-height: 5.5vw !important;
  }
}

.intro-text {
  font-size: 30vh;
  line-height: 0.5 !important;

  @screen md {
    font-size: 35vh;
    line-height: 5.5vw !important;
  }
  @screen lg {
    font-size: 42vh;
    line-height: 5.5vw !important;
  }

  @screen xl {
    font-size: 53vh;
    line-height: 5.5vw !important;
  }

  @screen 2xl {
    font-size: 550px !important;
    line-height: 120px !important;
  }
}

.wayfinder-item {
  @apply text-6xl; 

  @screen md {
    font-size: 12vw;
    line-height: 7.2vw;
  }
  @screen lg {
    font-size: 7.5vw;
    line-height: 4.7vw;
  }
}

.text-screen-studio-blurb {
  p {
    @apply text-3xl;

    @screen md {
      font-size: 3.45vw;
    }

    @screen md {
      font-size: 3.25vw;
    }
  }
}


button {
  @apply outline-none border-none appearance-none;
}

/* Link */
.link {
  @apply text-black underline transition;

  &:hover, &:focus {
    @apply text-gray-600;
  }

  &.is--active {
    @apply text-red-700;
  }
}

::selection { 
  background-color: rgba(219, 72, 30, .99);
  color: rgba(29, 29, 29, .99);
 }

 .invert-select::selection { 
  background-color: rgba(29, 29, 29, .99);
  color: rgba(219, 72, 30, .99);
 }

 img {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
 }

/* Content */
.content {
  
  /* Paragraph */
  p {
    @apply mb-6;
  }

  /* Headings following paragraphs */
  p + h1, p + h2, p + h3, p + h4 {
    @apply pt-6 block;
  }
}

.text-orient-down {
  writing-mode: vertical-rl;
}

.strike {
  position: relative;

  .strike__inner {
    position: relative;
    display: block;
    
    @screen md {
      &:after {
        content: ' ';
        position: absolute;
        top: calc(50% - 15px);
        left: 0;
        width: 0;
        height: 5px;
        background: currentColor;
      }
    }
  }

  &:focus, &:hover {
    .strike__inner {
      &:after {
        width: 100%;
      }
    }
  }
}

.strike__inner--white {
  &:after {
    @apply bg-white !important;
  }
}

.strike__inner--small {
  &:after {
    top: 37% !important;
    height: 2px !important;
  }
}

.content-indented {
  > p {
    &:before {
      content: "\a0\a0\a0\a0\a0\a0\a0\a0\a0"
    }
  }
}

